# routes/fiber/routes.go
@@ -75,7 +75,7 @@ func (r *Routes) Register(router fiber.Router) {
 // @Tags arcade
 // @Produce json
 // @Success 200 {object} models.Policy
-// @Router /arcade/policy [get]
+// @Router /policy [get]
 func (r *Routes) handleGetPolicy(c *fiber.Ctx) error {
 	policy, err := r.service.GetPolicy(c.UserContext())
 	if err != nil {
@@ -98,9 +98,9 @@ func (r *Routes) handleGetPolicy(c *fiber.Ctx) error {
 // @Param X-SkipScriptValidation header string false "Skip script validation (true/false)"
 // @Success 200 {object} models.TransactionStatus
 // @Failure 400 {object} arcerrors.ErrorFields
-// @Failure 460-475 {object} arcerrors.ErrorFields "ARC-specific validation errors"
+// @Failure 465 {object} errors.ErrorFields "ARC validation error"
 // @Failure 500 {object} map[string]string
-// @Router /arcade/tx [post]
+// @Router /tx [post]
 func (r *Routes) handlePostTx(c *fiber.Ctx) error {
 	ctx := c.UserContext()
 
@@ -136,8 +136,8 @@ func (r *Routes) handlePostTx(c *fiber.Ctx) error {
 // @Param X-SkipScriptValidation header string false "Skip script validation (true/false)"
 // @Success 200 {array} models.TransactionStatus
 // @Failure 400 {object} arcerrors.ErrorFields
-// @Failure 460-475 {object} arcerrors.ErrorFields "ARC-specific validation errors"
-// @Router /arcade/txs [post]
+// @Failure 465 {object} errors.ErrorFields "ARC validation error"
+// @Router /txs [post]
 func (r *Routes) handlePostTxs(c *fiber.Ctx) error {
 	ctx := c.UserContext()
 
@@ -194,7 +194,7 @@ func (r *Routes) handleSubmitError(c *fiber.Ctx, err error) error {
 // @Success 200 {object} models.TransactionStatus
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Router /arcade/tx/{txid} [get]
+// @Router /tx/{txid} [get]
 func (r *Routes) handleGetTx(c *fiber.Ctx) error {
 	status, err := r.service.GetStatus(c.UserContext(), c.Params("txid"))
 	if err != nil {
@@ -213,7 +213,7 @@ func (r *Routes) handleGetTx(c *fiber.Ctx) error {
 // @Produce text/event-stream
 // @Param callbackToken query string false "Callback token from transaction submission"
 // @Success 200 {string} string "SSE stream of transaction status updates"
-// @Router /arcade/events [get]
+// @Router /events [get]
 func (r *Routes) handleTxSSE(c *fiber.Ctx) error {
 	callbackToken := c.Query("callbackToken")
 
